@@ -30,8 +30,6 @@ Data::Validate::IP = 0.26   ; Validate IPv4 & IPv6 addresses
 DateTime = 1.21             ; Date/Time Processing
 DateTime::Format::DateParse = 0.05 ; Date/Time Parsing
 DBI = 1.634                 ; Database Access
-; DBD::mysql = 4.033          ; MySQL Database
-; DBD::Pg = 3.5.3             ; PostgreSQL Database, needed for Mojo::Pg
 DBD::SQLite = 1.48          ; SQLite Database
 Devel::Size = 0.80          ; Determine size of Perl structures
 Digest::SHA1 = 2.13         ; SHA1 Implementation
@@ -45,6 +43,7 @@ Dist::Zilla::Plugin::ReadmeAnyFromPod = 0.161170 ; POD creation plugin for Distz
 Email::Valid = 1.198        ; Validate Email Addresses
 English = 1.09              ; English variable names
 EV = 4.22                   ; Event Loop Routines
+Feature::Compat::Try = 0.05 ; Enable compatibility feature for try
 File::Copy = 2.30           ; Copy/Move Routines
 File::Flock::Tiny = 0.14    ; Simple file locking
 FindBin = 1.51              ; Finds the location of the script
@@ -61,12 +60,9 @@ IO::Select = 1.22           ; OO select()
 Lingua::EN::Numbers = 2.03  ; Convert numbers into English words
 List::Util = 1.42           ; General list processing utilities (like max())
 Log::Log4perl = 1.47        ; General logging
-; Mail::Sender = v0.8.23      ; To send emails
 Math::Random::ISAAC::XS = 1.004         ; Used by Bytes::Random via M:R:I
-; Mercury = 0.008             ; Message Bus over Websockets
 MIME::Base64 = 3.15         ; Base 64 encodings
 Mojolicious = 6.65          ; Web Framework
-; Mojo::Pg = 2.16             ; Postgres (including async)
 Moose = 2.1604              ; OO System
 Moose::Util::TypeConstraints = 2.1604   ; Type Constraints for Moose
 MooseX::Clone = 0.06        ; Clone Moose objects
@@ -74,12 +70,8 @@ MooseX::Singleton = 0.29    ; Singleton object
 MooseX::StrictConstructor = 0.19        ; Error on unknown args to constructor
 namespace::autoclean = 0.28 ; Cleans the name space of junk
 Net::DNS = 1.05             ; DNS, also used by Email::Valid optionally
-; Net::LDAP = 0.65            ; LDAP Routines
-; Net::XMPP = 1.05            ; Jabber
 NetAddr::IP = 4.078         ; IP Address Manipulation
-; PAR::Packer = 1.030         ; Build a single executable with embedded Perl
 Parallel::WorkUnit = 2.000  ; Parallelization Routines
-; Perl::Tags = 0.32           ; ctags support for Perl - Doesn't seem to work on 5.26
 Perl6::Slurp = 0.051005     ; Perl6-like Slurp
 POSIX = 1.53                ; POSIX defines
 Privileges::Drop = 1.03     ; Drop privileges
