@@ -44,6 +44,7 @@ no warnings 'experimental::re_strict';
 use re 'strict';
 
 use English;
+use Feature::Compat::Try;
 use Import::Into;
 use Smart::Comments;
 use re;
@@ -57,7 +58,8 @@ sub import ( $self, $type = 'script' ) {
     warnings->import::into($target);
     autodie->import::into($target);
 
-    feature->import::into( $target, ':5.22' );
+    my ($ver) = "$PERL_MAJOR" =~ m/^v(\d+\.\d+)\..*$/;
+    feature->import::into( $target, "$ver" );
 
     utf8->import::into($target);    # Allow UTF-8 Source
 
@@ -78,6 +80,8 @@ sub import ( $self, $type = 'script' ) {
     Smart::Comments->import::into( $target, '-ENV', '###' );
 
     feature->import::into( $target, 'postderef' );    # Not needed if feature bundle >= 5.23.1
+
+    feature->import::into( $target, 'Feature::Compat::Try' );
 
     # We haven't been using this
     # feature->import::into($target, 'refaliasing');
@@ -110,10 +114,6 @@ sub import ( $self, $type = 'script' ) {
 
         # Turn off bareword filehandles
         feature->unimport::out_of( $target, 'bareword_filehandles' );
-
-        # Turn on Try/Catch
-        feature->import::into( $target, 'try' );
-        warnings->unimport::out_of( $target, 'experimental::try' );
     }
 
     return;
